--- a/database-wiki/data/CIAWFB/presentation/CIAWFB.template
+++ b/database-wiki/data/CIAWFB/presentation/CIAWFB.template
@@ -10,129 +10,125 @@
 <script type="text/javascript" src="/js/dialog.js"></script>
 </head>
 <body>
-        <table align="center" class="main">
-        <tr><td class="main_logo">
-        
-                        @search
-        
-        </td></tr>
-        <tr><td class="main_frame">
-                if @timemachine {
-                <table class="timemachine">
-                        <tr>
-                                <td class="timemachine_logo"></td>
-                                <td class="timemachine_label">
-                                        Displayed<br/>Version(s)
-                                </td>
-                                <td class="timemachine_display">
+	<table align="center" class="main">
+	<tr><td class="main_logo">
+	
+			@search
+	
+	</td></tr>
+	<tr><td class="main_frame">
+		if @timemachine {
+		<table class="timemachine">
+			<tr>
+				<td class="timemachine_logo"></td>
+				<td class="timemachine_label">
+					Displayed<br/>Version(s)
+				</td>
+				<td class="timemachine_display">
 
-                                        @timemachine
+					@timemachine
 
-                                </td>
-                        </tr>
-                </table>
-                }
-                
-                if @menu {
-                <table class="menu">
-                        <tr>
-                                <td class="menu_line">
-                                        
-                                        @menu
-                                        
-                                </td>
-                        </tr>
-                </table>
-                }
-                
-                @login
+				</td>
+			</tr>
+		</table>
+		}
+		
+		if @menu {
+		<table class="menu">
+			<tr>
+				<td class="menu_line">
+					
+					@menu
+					
+				</td>
+			</tr>
+		</table>
+		}
+		
+		@login
 
-                @database_home_link
+		@database_home_link
 
-                @object_path_link
+		@object_path_link
 
-                if @annotation {
-                <table class="toggle_menu">
-                        <tr>
-                                <td class="toggle_menu">
-                                        <table><tr><td width="120px">
-                                        <a class="toggle_menu" href="#" onclick="dspToggleAnnotation(); return false;">Comments <img border=0 src="/pictures/annotation_small.gif"></a>
-                                        </td>
-                                        <td width="120px">
-                                         
-                                        <a class="toggle_menu" href="#" onclick="dspToggleProvenance(); return false;">History <img border=0 src="/pictures/provenance_small.gif"></a>
-                                        </td></tr></table>
-                                </td>
-                        </tr>
-                </table>
-                }
-                
-                <table class="frame">
-                        if @annotation {
-                        <tr>
-                                <td class="frame_body">
-                                        <div id="annotation_body" style="display:none">
-                                                <table class="listing">
-                                                        <tr>
-                                                                <td class="listing_headline">Comments</td>
-                                                        </tr>
-                                                        <tr><td class="listing_body">
+		if @annotation {
+		<table class="toggle_menu">
+			<tr>
+				<td class="toggle_menu">
+					<a class="toggle_menu" href="#" onclick="dspToggleAnnotation(); return false;">Comments&nbsp;&nbsp;<img border=0 src="/pictures/annotation_small.gif"></a>
+					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;
+					<a class="toggle_menu" href="#" onclick="dspToggleProvenance(); return false;">History&nbsp;&nbsp;<img border=0 src="/pictures/provenance_small.gif"></a>
+				</td>
+			</tr>
+		</table>
+		}
+		
+		<table class="frame">
+			if @annotation {
+			<tr>
+				<td class="frame_body">
+					<div id="annotation_body" style="display:none">
+						<table class="listing">
+							<tr>
+								<td class="listing_headline">Comments</td>
+							</tr>
+							<tr><td class="listing_body">
 
-                                                                @annotation
+								@annotation
 
-                                                        </td></tr>
-                                                </table>
-                                        </div>
-                                </td>
-                        </tr>
-                        }
-                        if @provenance {
-                        <tr>
-                                <td class="frame_body">
-                                        <div id="provenance_body" style="display:none">
-                                                <table class="listing">
-                                                        <tr>
-                                                                <td class="listing_headline">History</td>
-                                                        </tr>
-                                                        <tr><td class="listing_body">
+							</td></tr>
+						</table>
+					</div>
+				</td>
+			</tr>
+			}
+			if @provenance {
+			<tr>
+				<td class="frame_body">
+					<div id="provenance_body" style="display:none">
+						<table class="listing">
+							<tr>
+								<td class="listing_headline">History</td>
+							</tr>
+							<tr><td class="listing_body">
 
-                                                                @provenance
+								@provenance
 
-                                                        </td></tr>
-                                                </table>
-                                        </div>
-                                </td>
-                        </tr>
-                        }
-                        if @content {
-                                <tr>
-                                        <td class="frame_body">
-                                                <table class="listing">
-                                                        <tr><td class="listing_body">
+							</td></tr>
+						</table>
+					</div>
+				</td>
+			</tr>
+			}
+			if @content {
+				<tr>
+					<td class="frame_body">
+						<table class="listing">
+							<tr><td class="listing_body">
 
-                                                        @content
+							@content
 
-                                                        </td></tr>
-                                                </table>
-                                        </td>
-                                </tr>
-                        }
-                        if @page {
-                                <tr>
-                                        <td class="wiki_frame">
-                                                <table class="listing">
-                                                        <tr><td class="wiki_body">
+							</td></tr>
+						</table>
+					</td>
+				</tr>
+			}
+			if @page {
+				<tr>
+					<td class="wiki_frame">
+						<table class="listing">
+							<tr><td class="wiki_body">
 
-                                                        @page
+							@page
 
-                                                        </td></tr>
-                                                </table>
-                                        </td>
-                                </tr>
-                        }
-                </table>
-        </td></tr>
-        <tr><td class="main_footer">(c) 2010 - The University of Edinburgh - Database Group</td></tr>
-        </table>
+							</td></tr>
+						</table>
+					</td>
+				</tr>
+			}
+		</table>
+	</td></tr>
+	<tr><td class="main_footer">(c) 2010 - The University of Edinburgh - Database Group</td></tr>
+	</table>
 </body>
 </html>
