--- a/database-wiki/data/CIAWFB/presentation/CIAWFB.template
+++ b/database-wiki/data/CIAWFB/presentation/CIAWFB.template
@@ -6,12 +6,7 @@
 </title>
 @css
 <link rel="icon" type="image/gif" href="/pictures/favicon.gif">
-<script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false&language=en"></script>
-<script type="text/javascript" src="http://jqueryjs.googlecode.com/files/jquery-1.2.6.min.js"></script>
-<script type="text/javascript" src="http://code.jquery.com/jquery-latest.js"></script>
-<script type="text/javascript" src="https://www.google.com/jsapi"></script>
-<script type="text/javascript" src="/js/dialog.js"></script>
-<script type="text/javascript" src="/js/visualisation.js"></script>
+@import
 </head>
 <body>
 	<table align="center" class="main">
