--- a/database-wiki/resources/configuration/server/config.sample
+++ b/database-wiki/resources/configuration/server/config.sample
@@ -17,6 +17,6 @@ WIKI_TITLE=Edinburgh Database Wiki
 RDBMS_TYPE=PSQL
 # If password needed, uncomment and fill in
 # JDBC_PASSWORD=
-JDBC_URL=jdbc:postgresql://localhost
-JDBC_USER=dbwiki
+JDBC_URL=
+JDBC_USER=
 
