* Refactored to avoid dependency on com.sun.net.httpserver outside of org.dbwiki.web.server.

--- a/database-wiki/build.xml
+++ b/database-wiki/build.xml
@@ -1,4 +1,4 @@
-<project name="DatabaseWiki" default="build" basedir=".">
+<project name="DatabaseWiki" default="compile" basedir=".">
   <description>
     Database Wiki build file
   </description>
