--- a/build.xml
+++ b/build.xml
@@ -2,7 +2,7 @@
 <project basedir="." default="compile" name="appengine">
   <property name="sdk.dir" location="${user.home}/.eclipse/org.eclipse.platform_3.8_155965261/plugins/com.google.appengine.eclipse.sdkbundle_1.9.7/appengine-java-sdk-1.9.7/" />
 
-  <import file="${sdk.dir}/config/user/ant-macros.xml" />
+  <import file="${sdk.dir}/config/user/ant-macros.xml" optional="true"/>
 
   <path id="project.classpath">
     <pathelement path="war/WEB-INF/classes" />
@@ -14,8 +14,8 @@
     </fileset>
   </path>
     
-  <target name="copyjars"
-      description="Copies the App Engine JARs to the WAR.">
+  <target name="copyjars" description="Copies the App Engine JARs to the WAR."
+	depends="sdk-check" if="have-sdk">
     <copy
         todir="war/WEB-INF/lib"
         flatten="true">
@@ -26,26 +26,14 @@
   </target>
 
   <target name="compile" depends="copyjars"
-      description="Compiles Java source and copies other source files to the WAR.">
+      description="Compiles Java source to the WAR.">
     <mkdir dir="war/WEB-INF/classes" />
-    <copy todir="war/WEB-INF/classes">
-      <fileset dir="src">
-        <exclude name="**/*.java" />
-      </fileset>
-    </copy>
     <javac
         srcdir="src"
         destdir="war/WEB-INF/classes"
         classpathref="project.classpath"
         debug="on"
         includeantruntime="false">
-        <exclude name="org/dbwiki/main/DatabasePackageExport.java"/>
-        <exclude name="org/dbwiki/main/StartServer.java"/>
-        <exclude name="org/dbwiki/web/security/WikiAuthenticator.java"/>
-        <exclude name="org/dbwiki/web/server/DatabaseWikiHttpHandler.java"/>
-        <exclude name="org/dbwiki/web/server/HtmlSender.java"/>
-        <exclude name="org/dbwiki/web/server/HttpExchangeWrapper.java"/>
-        <exclude name="org/dbwiki/web/server/WikiServerHttpHandler.java"/>
     </javac>
   </target>
 
@@ -58,9 +46,16 @@
       description="Starts the development server.">
     <dev_appserver war="war" />
   </target>
-
-  <target name="upload-gae" description="Uploads the application to App Engine.">
-    <appcfg action="update" war="war" />
+  
+  <target name="run-server-old" depends="compile"
+      description="Starts the HttpServer version of DBWiki.">
+    <exec executable="java">
+    <arg value="-mx512M"/>
+    <arg value="-classpath"/>
+    <arg value="./src:./war/WEB-INF/classes:./war/WEB-INF/lib/xercesImpl.jar:./war/WEB-INF/lib/parboiled4j-0.9.9.0.jar:./war/WEB-INF/lib/mysql-connector-java-5.1.13-bin.jar:./war/WEB-INF/lib/postgresql-8.4-701.jdbc4.jar"/>
+    <arg value="org.dbwiki.main.StartServer"/>
+    <arg value="./war/resources/configuration/server/config.local"/>
+  </exec>
   </target>
   
   <target name="deploy" depends="datanucleusenhance"
@@ -78,26 +73,8 @@
     </java>
   </target>
   
-  <target name="update-indexes" depends="datanucleusenhance"
-      description="Uploads just the datastore index configuration to App Engine.">
-    <appcfg action="update_indexes" war="war" />
-  </target>
-
-  <target name="rollback" depends="datanucleusenhance"
-      description="Rolls back an interrupted application update.">
-    <appcfg action="rollback" war="war" />
-  </target>
-
-  <target name="request-logs"
-      description="Downloads log data from App Engine for the application.">
-    <appcfg action="request_logs" war="war">
-      <options>
-        <arg value="--num_days=5"/>
-      </options>
-      <args>
-        <arg value="logs.txt"/>
-      </args>
-    </appcfg>
+  <target name="sdk-check">
+    <available file="${sdk.dir}" type="dir" property="have-sdk"/>
   </target>
 
 </project>
