--- a/.gitignore
+++ b/.gitignore
@@ -5,3 +5,6 @@ synchronize_log
 create-server8081.sh
 resources/configuration/server/config8081
 sync_log_v*
+src/org/dbwiki/data/io/VisualizeChanges.java
+targetFile.xml
+*.xml
