--- a/resources/configuration/server/config
+++ b/resources/configuration/server/config
@@ -16,7 +16,7 @@ WIKI_TITLE=Edinburgh Database Wiki
 # Database parameters
 RDBMS_TYPE=PSQL
 # If password needed, uncomment and fill in
-JDBC_PASSWORD=dbwikipwd
+JDBC_PASSWORD=dbwikipw
 JDBC_URL=jdbc:postgresql://localhost
 JDBC_USER=dbwiki
 
